--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "doctrine/dbal": "^4.2",
         "laravel/cashier": "15.6",
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.18",
